--- a/microbiome_analysis_template.ipynb
+++ b/microbiome_analysis_template.ipynb
@@ -13,11 +13,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4fd655c3",
+   "id": "71243014",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
+    "%matplotlib  inline\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
@@ -29,8 +29,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4fd655c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# this object will hold many of the preprocessing data\n",
+    "# be careful to re-set it as you will have to re-do multiple steps to recreate these infos\n",
+    "prj_data = dict()"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "cca1b8a7",
+   "id": "f910947f",
    "metadata": {},
    "source": [
     "## Load metadata"
@@ -39,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ddc9c44",
+   "id": "ac9147b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +75,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prj_data = init_project(pi=PROJECT_PI, name=PROJECT_NAME, force=False)"
+    "prj_data = init_project(pi=PROJECT_PI, name=PROJECT_NAME, prj_data=prj_data, force=False)"
    ]
   },
   {
@@ -120,7 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8cc6199e",
+   "id": "8cfbce33",
    "metadata": {},
    "source": [
     "## Deblur"
@@ -129,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40dc3fad",
+   "id": "7ca99083",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +150,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4af29b69",
+   "id": "c9e0c2df",
    "metadata": {},
    "source": [
     "## SEPP"
@@ -147,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f7e1a1d",
+   "id": "141aeb2e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e71bd2a5",
+   "id": "1650f3dc",
    "metadata": {},
    "source": [
     "## Rarefaction + Diversity + Emperor\n",
@@ -169,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7d15bd1",
+   "id": "a761e8a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +193,7 @@
     "    fp_insertiontree=prj_data['paths']['insertion_tree'],\n",
     "    rarefaction_depth=7000,\n",
     "    fp_taxonomy_trained_classifier='/homes/sjanssen/MicrobiomeAnalyses/References/Q2-Naive_Bayes_classifiers/gg-13-8-99-515-806-nb-classifier_2021.4.qza',\n",
-    "    tree_insert=insertion_tree,\n",
+    "    tree_insert=prj_data['insertion_tree'],\n",
     "    is_v4_region=True,\n",
     "    emperor_fp=prj_data['paths']['Generated/Emperor'],\n",
     "    emperor_infix='_deblur_',\n",
@@ -193,7 +205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b55a8f56",
+   "id": "8ad8fe60",
    "metadata": {},
    "source": [
     "### stratify rarefaction curves by metadata"
@@ -202,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "efa1dbf0",
+   "id": "bf5cb30f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a36b6eba",
+   "id": "90302ffa",
    "metadata": {},
    "source": [
     "# Explore Data"
@@ -225,7 +237,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a1d1308",
+   "id": "732b74dc",
    "metadata": {},
    "source": [
     "## Taxonomy Barplot"
@@ -234,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9ba5d62",
+   "id": "a00fe091",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +258,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7915f7e3",
+   "id": "729a2aa8",
    "metadata": {},
    "source": [
     "## Correlation: within metadata\n",
@@ -262,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "354d79e7",
+   "id": "870b4ecd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62b4df82",
+   "id": "5d759634",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d88691c",
+   "id": "f10ff6d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +331,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3cb7f37",
+   "id": "80b51bb7",
    "metadata": {},
    "source": [
     "## Correlation: metadata with microbiome\n",
@@ -329,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e832acc",
+   "id": "3174a524",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1170892",
+   "id": "76e0c009",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +365,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6c5cce4",
+   "id": "a0311afd",
    "metadata": {},
    "source": [
     "collapse above table to smallest p-value per column."
@@ -362,7 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73f17a1d",
+   "id": "e428f7d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40c77942",
+   "id": "4cb179b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f152d15",
+   "id": "f8dfaa53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,14 +425,6 @@
     "                             ax=axes[i][1], title='%s' % metric,\n",
     "                             dry=False, wait=False, use_grid=usegrid)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "17bca2eb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
