add qiita check

--- a/microbiome_analysis_template.ipynb
+++ b/microbiome_analysis_template.ipynb
@@ -168,6 +168,27 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0e681d23",
+   "metadata": {},
+   "source": [
+    "before starting big compute, double check sources of metadata and feature table. It is not unlikely that you partially use data from Qiita and mix with local metadata that lack qiita-study-id prefix like `14078.`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0574bef7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qiita_metadata = any(map(lambda x: 'qiita' in x.lower(), prj_data['metadata'].columns)) and all(map(lambda x: re.match('^\\d+\\.', x) is not None, prj_data['metadata'].index))\n",
+    "qiita_counts = all(map(lambda x: re.match('^\\d+\\.', x) is not None, biom2pandas(prj_data['paths']['deblur_table']).columns))\n",
+    "if (qiita_metadata != qiita_counts) and (len(set(qiita_metadata.index) & set(biom2pandas(prj_data['paths']['deblur_table']).columns))) <= 0:\n",
+    "    raise ValueError(\"Please double check that both, metadata and feature table stem from Qiita or other sources. It looks like sample indices do not match!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1650f3dc",
    "metadata": {},
    "source": [
