fixing loop iteration

--- a/microbiome_analysis_template.ipynb
+++ b/microbiome_analysis_template.ipynb
@@ -415,9 +415,9 @@
     "# subset columns to those that significantly correlate with microbiome data\n",
     "# you should manually reduce the number of columns you want to investigate, \n",
     "# since every addition of a column costs a lot of statistical power and a too complex model might find nothing at all!\n",
-    "model_cols_date = {k: v for k,v in cols_date if k in sig_cols}\n",
+    "model_cols_date = {k: v for k,v in cols_date.items() if k in sig_cols}\n",
     "model_cols_interval = {c for c in cols_interval if c in sig_cols}\n",
-    "model_cols_ordinal = {k: v for k,v in cols_ordinal if k in sig_cols}\n",
+    "model_cols_ordinal = {k: v for k,v in cols_ordinal.items() if k in sig_cols}\n",
     "model_cols_categorial = {c for c in cols_categorial if c in sig_cols}"
    ]
   },
