--- a/microbiome_analysis_template.ipynb
+++ b/microbiome_analysis_template.ipynb
@@ -346,7 +346,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res_corrmeta = correlate_metadata(prj_data['metadata'][set(prj_data['metadata'].columns) - set(cols_ignore)], categorials=list(cols_categorial), ordinals=cols_ordinal, dates=cols_date, intervals=list(cols_interval))\n",
+    "res_corrmeta = correlate_metadata(prj_data['metadata'][list(set(prj_data['metadata'].columns) - set(cols_ignore))], categorials=list(cols_categorial), ordinals=cols_ordinal, dates=cols_date, intervals=list(cols_interval))\n",
     "display(res_corrmeta[1])"
    ]
   },
@@ -464,7 +464,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.10.9"
   },
   "toc": {
    "base_numbering": 1,
