adding a new function to batch produce fastQC / multiQC for fwd / rev read files

--- a/microbiome_analysis_template.ipynb
+++ b/microbiome_analysis_template.ipynb
@@ -125,6 +125,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "028bc0c2-65bd-4dfa-8df9-63f58caf6f67",
+   "metadata": {},
+   "source": [
+    "### Sequencing Quality Check"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d73ba60c-4817-4c62-951b-76e8af701892",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res_qc = QC(prj_data['paths']['demux'], dry=False, wait=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e0bbce5a",
    "metadata": {},
    "source": [
