destroy file path to raise awareness that user has to adapt

--- a/microbiome_analysis_template.ipynb
+++ b/microbiome_analysis_template.ipynb
@@ -248,7 +248,7 @@
     "    fp_deblur_biom=prj_data['paths']['deblur_table'],\n",
     "    fp_insertiontree=prj_data['paths']['insertion_tree'],\n",
     "    rarefaction_depth=7000,\n",
-    "    fp_taxonomy_trained_classifier='/homes/sjanssen/MicrobiomeAnalyses/References/Q2-Naive_Bayes_classifiers/gg-13-8-99-515-806-nb-classifier_2021.4.qza',\n",
+    "    fp_taxonomy_trained_classifier='/homes/sjanssen/MicrobiomeAnalyses/References/Q2-Naive_Bayes_classifiers/gg2.....',\n",
     "    tree_insert=prj_data['insertion_tree'],\n",
     "    is_v4_region=True,\n",
     "    emperor_fp=prj_data['paths']['Generated/Emperor'],\n",
